--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="c:\Users\wacky\OneDrive\Pictures\PICT0062.jpg" alt="My Picture" width="200" height="150"> </td>
+            <td> <img src="images\PICT0062.jpg" alt="My Picture" width="200" height="150"> </td>
             <td>  <h1>Trixian Wackyll C. Granado</h1>
             <h3>Student | Aspiring IT Professional</h3>  </td>
         </tr>
@@ -101,3 +101,4 @@
 
 </body>
 </html>
+
