--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="images\PICT0062.jpg" alt="My Picture" width="200" height="150" border-radius="50%"> </td>
+            <td> <img src="images/PICT0062.jpg" alt="My Picture" style="border-radius: 50%; width: 200px; height: 200px;"> </td>
             <td>  <h1>Trixian Wackyll C. Granado</h1>
             <h3>Student | Aspiring IT Professional</h3>  </td>
         </tr>
@@ -99,7 +99,10 @@
     </ol>
     <hr> 
 
+    <a href="Form ko.html">Contact Me</a>
+
 </body>
 </html>
+
 
 
