--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="images/PICT0062.jpg" alt="My Picture" style="border-radius: 50%; width: 200px; height: 200px;"> </td>
+            <td> <img src="images/Pic ko.jpg" alt="My Picture" style="border-radius: 50%; width: 200px; height: 200px;"> </td>
             <td>  <h1>Trixian Wackyll C. Granado</h1>
             <h3>Student | Aspiring IT Professional</h3>  </td>
         </tr>
@@ -103,6 +103,7 @@
 
 </body>
 </html>
+
 
 
 
