--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
     </ol>
     <hr> 
 
-    <a href="https://github.com/trixianwackyllgranado/cv/blob/main/Form.html" style="border:1px solid black; padding:5px 10px; text-decoration:none; color:black;">Contact Me</a>
+    <a href="Form.html" style="border:1px solid black; padding:5px 10px; text-decoration:none; color:black;">Contact Me</a>
 
 </body>
 </html>
+
 
 
 
